Fri Feb  8 23:53:10 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-keyboard-properties.c (dialog_response): hook up buttons.

2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:

	Install icon into the standard pixmaps directory
	so that Panel & Nautilus will pick up on it.

2002-01-14  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am (bin_PROGRAMS): Rename binary
	gnome2-keyboard-properties

Tue Jan  8 15:49:15 2002  Jonathan Blandford  <jrb@redhat.com>

	* .cvsignore: update
	* Makefile.am: Add gnome-keyboard-properties.c
	* gnome-keyboard-properties.c: New, much nicer capplet.
	* gnome-keyboard-properties.glade: glade file for above.
	* keyboard-bell.png:
	* keyboard-cursor.png:
	* keyboard-repeat.png:
	* keyboard-volume.png: Images for above.  Note,
	keyboard-cursor.png is my pathetic attempt at artwork, and will
	prolly change in the future.

2001-12-20  Seth Nickell  <snickell@stanford.edu>

	* keyboard.desktop.in:

	Add Categories field so it shows up correctly in the
	panel menus.

2001-12-20  Bradford Hovinen  <hovinen@ximian.com>

	* keyboard-properties.c (dialog_button_clicked_cb): Update
	(main): Use a GtkDialog rather than a GnomeDialog; don't place a
	weak ref on gtk_main_quit

	* Makefile.am: Update

	* keyboard.desktop.in.in (Exec): Update

2001-12-19  Bradford Hovinen  <hovinen@ximian.com>

	* keyboard-properties.c (apply_settings): Comment out; pending
	removal to gnome-settings-daemon
	(setup_dialog): Set conversion functions
	(rate_to_widget, rate_from_widget, delay_to_widget) 
	(delay_from_widget): Implement

2001-12-18  Bradford Hovinen  <hovinen@ximian.com>

	* keyboard-properties.c: Port to GConf/GNOME 2.0. Many changes.
	(setup_dialog): Use correct widget name
	(create_dialog): Use gtk_image_ functions for the volume icon
	(get_int_from_changeset): Use return value of
	gconf_change_set_check_value to determine if the key is in the set
	(get_legacy_settings): Enable
