@@ -30,9 +30,9 @@
                 <property name="can_default">yes</property>
                 <property name="can_focus">yes</property>
                 <property name="visible">yes</property>
-                <property name="label" translatable="yes">gtk-help</property>
+                <property name="label" translatable="yes">gtk-apply</property>
                 <property name="use_stock">yes</property>
-                <property name="response_id">-11</property>
+                <property name="response_id">1</property>
                 <property name="use_underline">yes</property>
               </widget>
             </child>
@@ -41,8 +41,9 @@
               <widget class="GtkButton" id="button3">
                 <property name="can_default">yes</property>
                 <property name="can_focus">yes</property>
-                <property name="label" translatable="yes">Done</property>
-                <property name="response_id">-7</property>
+                <property name="label" translatable="yes">gtk-close</property>
+                <property name="use_stock">yes</property>
+                <property name="response_id">2</property>
                 <property name="visible">yes</property>
               </widget>
             </child>
